<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llAdapterParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_8sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Regular12"
        android:text="@string/booking_date"
        android:layout_marginTop="@dimen/_1sdp"/>
    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium16"
        android:text="-"
        android:layout_marginTop="@dimen/_2sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Regular12"
        android:text="@string/booking_code"
        android:layout_marginTop="@dimen/_6sdp"/>
    <TextView
        android:id="@+id/tvBookingCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium16"
        android:text="-"
        android:layout_marginTop="@dimen/_2sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Regular12"
        android:text="@string/shared_res_status"
        android:layout_marginTop="@dimen/_6sdp"/>
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium16"
        android:text="-"
        android:layout_marginTop="@dimen/_2sdp"/>

</LinearLayout>