<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ResourceName">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back"/>

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_icon"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_16sdp">
            <ImageView
                android:id="@+id/ivIconProfile"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_account_circle"
                android:background="@drawable/bg_circle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/_8sdp">
                <TextView
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shared_res_name"
                    style="@style/SemiBold16"/>

                <TextView
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/shared_res_location"
                    style="@style/Regular12Gray"
                    android:enabled="false"
                    android:layout_marginTop="@dimen/_4sdp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_rounded_6_gradient">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Regular12White"
                        android:text="@string/profile_referral_amount"/>
                    <TextView
                        android:id="@+id/tvReferralAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Bold20White"
                        android:text="2"
                        android:layout_marginTop="@dimen/_8sdp"/>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Regular12White"
                        android:text="@string/profile_tier_name"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center_vertical">
                        <ImageView
                            android:id="@+id/ivTier"
                            android:layout_width="@dimen/_22sdp"
                            android:layout_height="@dimen/_22sdp"/>
                        <TextView
                            android:id="@+id/tvTierName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Bold20White"
                            android:text="Silver"
                            android:layout_marginStart="@dimen/_4sdp"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_4sdp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Regular12White"
                        android:text="@string/profile_referral_code" />
                    <TextView
                        android:id="@+id/tvReferralCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SemiBold18White"
                        android:text="ASD"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:drawableRight="@drawable/ic_copy"
                        android:drawableTint="@color/white"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvMoreInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Regular12GreenDark"
                    android:text="@string/profile_more_information"
                    android:gravity="center_vertical"
                    android:drawableRight="@drawable/home_arrow_right"
                    android:drawableTint="@color/colorPrimaryGreenDark"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Regular12Gray"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/profile_bank_info"/>

        <EditText
            android:id="@+id/etBankName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_bank_name"
            style="@style/Regular14"
            android:enabled="false"
            android:layout_marginTop="@dimen/_4sdp"/>

        <EditText
            android:id="@+id/etBankAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_bank_account_number"
            style="@style/Regular14"
            android:enabled="false"
            android:layout_marginTop="@dimen/_8sdp"/>

        <CheckBox
            android:id="@+id/cbAcceptCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_accept_cash"
            android:layout_marginTop="@dimen/_8sdp"/>

        <CheckBox
            android:id="@+id/cbAcceptBankTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_accept_bank_transfer"
            android:layout_marginTop="@dimen/_8sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_16sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_upload_profile_picture"
                style="@style/SemiBold20"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLine"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/ivAddPhotoProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_photo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_16sdp">

            <TextView
                style="@style/SemiBold20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ktp_picture" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLine"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/ivAddPhotoKtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_photo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_16sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ktp_picture_person"
                style="@style/SemiBold20"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLine"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/ivAddPhotoKtpPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_photo"/>
        </LinearLayout>

        <Button
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_6"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/shared_res_save"
            style="@style/ButtonText"
            android:layout_marginTop="@dimen/_30sdp"/>
    </LinearLayout>
</ScrollView>